# pc-remote

./: .gitignore  Cargo.toml  LICENSE.md  README.md  README_RU.md  Tauri.toml
capabilities/: default.json
icons/: icon.icns
sketch/: sketch.ino
src/: build.rs  config.rs  elementor.rs  error.rs  lib.rs  logger.rs  main.rs  prelude.rs
src/binds/: action.rs  bind.rs  mod.rs
src/controller/: controller.rs  mod.rs
src/emulator/: emulator.rs  keyboard.rs  media.rs  mod.rs  mouse.rs
ui/assets/scripts/js/: main.js
ui/assets/styles/css/: main.css
ui/assets/styles/scss/: main.scss
ui/assets/styles/scss/modules/: reset.scss  ui-kit.scss
ui/views/: main.html
